--- a/doc/talk/talk.bib
+++ b/doc/talk/talk.bib
@@ -18,3 +18,34 @@
   year            = {2011},
   doi             = {10.5591/978-1-57735-516-8/IJCAI11-363}
 }
+@inproceedings{DBLP:conf/kr/KazemiP16,
+  author       = {Seyed Mehran Kazemi and
+                  David Poole},
+  title        = {Knowledge Compilation for Lifted Probabilistic Inference: Compiling
+                  to a Low-Level Language},
+  booktitle    = {{KR}},
+  pages        = {561--564},
+  publisher    = {{AAAI} Press},
+  year         = {2016}
+}
+@article{DBLP:journals/cacm/GogateD16,
+  author          = {Vibhav Gogate and Pedro M. Domingos},
+  title           = {Probabilistic theorem proving},
+  journal         = {Commun. {ACM}},
+  volume          = {59},
+  number          = {7},
+  pages           = {107--115},
+  year            = {2016},
+  doi             = {10.1145/2936726}
+}
+@inproceedings{DBLP:conf/uai/BremenK21,
+  author          = {Timothy {van Bremen} and Ond\v{r}ej Ku\v{z}elka},
+  title           = {Faster lifting for two-variable logic using cell graphs},
+  booktitle       = {{UAI}},
+  series          = {Proceedings of Machine Learning Research},
+  volume          = {161},
+  pages           = {1393--1402},
+  publisher       = {{AUAI} Press},
+  year            = {2021},
+  url             = {https://proceedings.mlr.press/v161/bremen21a.html}
+}
