--- a/doc/talk/talk.tex
+++ b/doc/talk/talk.tex
@@ -105,7 +105,7 @@
     \[
       \forall x \in \alert<2>{\Gamma}\text{.
       }\forall y, z \in \alert<2>{\Delta}\text{.
-      }P(x, y) \land P(x, z) \Rightarrow \alert<4>{y=z}
+      }P(x, y) \land P(x, z) \to \alert<4>{y=z}
     \]
   \end{exampleblock}
   \begin{block}{\mbox{\alert<2>{Many-Sorted} \alert<3>{Function-Free}
@@ -406,13 +406,6 @@
       \item Fine-grained complexity
     \end{itemize}
   \end{block}
-  % \vspace{0.5em} \small
-  % \begin{itemize}
-  %   \item Implementation:
-  %         \href{https://github.com/dilkas/crane}{\texttt{github.com/dilkas/crane}}
-  %   \item Experimental setup:
-  %         \href{https://github.com/dilkas/sat25-ksdm}{\texttt{github.com/dilkas/sat25-ksdm}}
-  % \end{itemize}
 \end{frame}
 
 \end{document}
